infra/app-of-apps/home-assistant/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant
  labels:
    istio-injection: enabled
    istio.io/dataplane-mode: ambient
