infra/app-of-apps/home-assistant/zigbee2mqtt-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee2mqtt
  namespace: home-assistant
spec:
  hostnames:
    - "zigbee.brandwhisper.cloud"
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: istio-system
      sectionName: https
  rules:
    - backendRefs:
        - name: zigbee2mqtt
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: "/"
